test/tests/stages/18_structures/invalid_types/extra_credit/other_features/postfix_decr_struct_arrow.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: inner
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: outer
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: s
            Structure: 
              TIdentifier: inner
              Bool: 0
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_struct
                  CCompoundInit: 
                    List[1]: 
                      CCompoundInit: 
                        List[1]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: outer
                    Bool: 0
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: my_struct
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: outer
                      Bool: 0
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CSubtract: 
                    CArrow: 
                      TIdentifier: s
                      CVar: 
                        TIdentifier: ptr
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
